Base64无依赖问题
移除codec依赖：
org.apache.commons.codec.binary.Base64;

采用jdk依赖：
sun.misc.BASE64Decoder;
sun.misc.BASE64Encoder;