@@ -5,11 +5,11 @@ import com.zgl.util.NumberUtil;
 import com.zgl.util.secure.enums.EnumCipherAlgorithm;
 import com.zgl.util.secure.enums.EnumKeyAlgorithm;
 import lombok.extern.slf4j.Slf4j;
-import org.apache.commons.codec.binary.Base64;
 import org.apache.commons.io.IOUtils;
 import org.apache.commons.lang3.ArrayUtils;
 import org.bouncycastle.jce.provider.BouncyCastleProvider;
-
+import sun.misc.BASE64Decoder;
+import sun.misc.BASE64Encoder;
 
 import javax.crypto.*;
 import javax.crypto.spec.SecretKeySpec;
@@ -23,6 +23,8 @@ import java.security.spec.X509EncodedKeySpec;
 
 /**
  * 加解密工具类
+ * 之前base64加密用的是sun公司的sun.misc.BASE64Encoder/BASE64Decoder，
+ * 由于后面版本更新，sun公司被oracle公司收购，加密类BASE64Encoder被org.apache.commons.codec.binary.Base64替代了。
  * 
  * @author ZGL
  * 
@@ -243,7 +245,8 @@ public class CipherUtil {
 			//现在，获取数据并加密
             byte[] e = encrypt(EnumCipherAlgorithm.DES_ECB_PKCS5Padding,keyspec.getEncoded(),plaintext.getBytes());
             //现在，获取数据并编码
-			byte[] temp = Base64.encodeBase64(e);
+//			byte[] temp = Base64.encodeBase64(e);
+			byte[] temp = new BASE64Encoder().encode(e).getBytes();
 			return IOUtils.toString(temp,"UTF-8");
 		}catch(Throwable e){
 			e.printStackTrace();
@@ -263,7 +266,8 @@ public class CipherUtil {
 			//现在，获取数据并加密
 			byte[] e = encrypt(EnumCipherAlgorithm.DESede_ECB_PKCS5Padding,keyspec.getEncoded(),plaintext.getBytes());
 			//现在，获取数据并编码
-			byte[] temp = Base64.encodeBase64(e);
+//			byte[] temp = Base64.encodeBase64(e);
+			byte[] temp = new BASE64Encoder().encode(e).getBytes();
 			return IOUtils.toString(temp,"UTF-8");
 		}catch(Throwable e){
 			e.printStackTrace();
@@ -283,7 +287,8 @@ public class CipherUtil {
 			//现在，获取数据并加密
 			byte[] e = encrypt(EnumCipherAlgorithm.AES_ECB_PKCS5Padding,keyspec.getEncoded(),plaintext.getBytes());
 			//现在，获取数据并编码
-			byte[] temp = Base64.encodeBase64(e);
+//			byte[] temp = Base64.encodeBase64(e);
+			byte[] temp = new BASE64Encoder().encode(e).getBytes();
 			return IOUtils.toString(temp,"UTF-8");
 		}catch(Throwable e){
 			e.printStackTrace();
@@ -302,7 +307,8 @@ public class CipherUtil {
         try {
 			SecretKeySpec keyspec = new SecretKeySpec(key.getBytes(), EnumKeyAlgorithm.DES.name());
             // 真正开始解码操作
-            byte[] temp = Base64.decodeBase64(ciphertext);
+//            byte[] temp = Base64.decodeBase64(ciphertext);
+			byte[] temp = new BASE64Decoder().decodeBuffer(ciphertext);
             // 真正开始解密操作
             byte[] e = decrypt(EnumCipherAlgorithm.DES_ECB_PKCS5Padding,keyspec.getEncoded(),temp);
             return IOUtils.toString(e,"UTF-8");
@@ -323,7 +329,8 @@ public class CipherUtil {
 		try {
 			SecretKeySpec keyspec = new SecretKeySpec(key.getBytes(), EnumKeyAlgorithm.DESede.name());
 			// 真正开始解码操作
-			byte[] temp = Base64.decodeBase64(ciphertext);
+//			byte[] temp = Base64.decodeBase64(ciphertext);
+			byte[] temp = new BASE64Decoder().decodeBuffer(ciphertext);
 			// 真正开始解密操作
 			byte[] e = decrypt(EnumCipherAlgorithm.DESede_ECB_PKCS5Padding,keyspec.getEncoded(),temp);
 			return IOUtils.toString(e,"UTF-8");
@@ -344,7 +351,8 @@ public class CipherUtil {
 		try {
 			SecretKeySpec keyspec = new SecretKeySpec(key.getBytes(), EnumKeyAlgorithm.AES.name());
 			// 真正开始解码操作
-			byte[] temp = Base64.decodeBase64(ciphertext);
+//			byte[] temp = Base64.decodeBase64(ciphertext);
+			byte[] temp = new BASE64Decoder().decodeBuffer(ciphertext);
 			// 真正开始解密操作
 			byte[] e = decrypt(EnumCipherAlgorithm.AES_ECB_PKCS5Padding,keyspec.getEncoded(),temp);
 			return IOUtils.toString(e,"UTF-8");
@@ -354,6 +362,123 @@ public class CipherUtil {
 		}
 	}
 
+	/**
+	 * 从字符串中加载公钥
+	 * @return
+	 * @throws Exception 加载公钥时产生的异常
+	 */
+	private static RSAPublicKey loadPublicKeyByStr() throws Exception {
+		String publicKey = "MIGfMA0GCSqGSIb3DQEBAQUAA4GNADCBiQKBgQC7rS78PJLTDLcHmF7bSUteQZB7joIyuCx3Z8T5A+KPbFQFPZmXMigDhM4vbzcfrUwcKq+c7X+wQPJ3Poi6VpCGnRbK8ts6+PIH8klS/UT/+LS9V+eEA0fBlD1MwQemJIYUhFbAvlGJ4IBubo9qjOaHJCPlBI93p3WMyp3N4GoONwIDAQAB";
+		try {
+			KeyFactory keyFactory = KeyFactory.getInstance(EnumCipherAlgorithm.RSA_ECB_PKCS1Padding.getKeyAlgorithm().name());
+//			X509EncodedKeySpec keySpec = new X509EncodedKeySpec(Base64.decodeBase64(publicKey));
+			byte[] temp = new BASE64Decoder().decodeBuffer(publicKey);
+			X509EncodedKeySpec keySpec = new X509EncodedKeySpec(temp);
+			return (RSAPublicKey) keyFactory.generatePublic(keySpec);
+		} catch (NoSuchAlgorithmException e) {
+			throw new Exception("无此算法");
+		} catch (InvalidKeySpecException e) {
+			throw new Exception("公钥非法");
+		} catch (NullPointerException e) {
+			throw new Exception("公钥数据为空");
+		}
+	}
+
+	/**
+	 * 从字符串中加载私钥
+	 * @return
+	 * @throws Exception
+	 */
+	public static RSAPrivateKey loadPrivateKeyByStr() throws Exception {
+		String privateKey = "MIICeAIBADANBgkqhkiG9w0BAQEFAASCAmIwggJeAgEAAoGBALutLvw8ktMMtweYXttJS15BkHuOgjK4LHdnxPkD4o9sVAU9mZcyKAOEzi9vNx+tTBwqr5ztf7BA8nc+iLpWkIadFsry2zr48gfySVL9RP/4tL1X54QDR8GUPUzBB6YkhhSEVsC+UYnggG5uj2qM5ockI+UEj3endYzKnc3gag43AgMBAAECgYA427QDaRqWZCDDZU8/okn6KWTrefZKBXA7UK3lP18RUqF14P66RtDGmCKbTldl+mu3kNsZcP6hWFvc8o4b3gP0r5nlW+12Xp6qwg7Ayx7QnvujytnZKu3ijRQhYTXKa9EDbUnPQSMdvBmdnij+QwXGxCiQr90wXslkawNB/GfjIQJBAOKOC4Mi4NWhZptNTZE+4YQcdwM7d8z3PYqv9yGvgym9aPz6EfMX9R4RMBILIjSlNAuRtb+O+zJmfcLWr4Kr7YcCQQDUEZLq4YRjiXJpPCsL+PiQamPF64w/TPNzSF/NzBr3Brkj7/iLk/QANy+3oIbaJMFf7qIEFbf8nGuPyEq8qoXRAkEAjKorRbG7LYk3/wchOSR0uyU9U7lxqcZ85IZbCAREiP78l83gpTHj1FZRpXJaO5uzU9eVpClvmByAyx+m+5gqMwJBAIUpg9d5RGg8JltuLJmX/HyyUXQ2NBqLd1MsXvwa7dOvpRGr3aXHga+g95WWdxcDfWl/rrxh5uX4UpI2creFXAECQQDZVivHFIE1oU7ayXvICgNp72gmwZPWoKyY8coJ7lw200YYMRfP/ZaYDh1dSCsRAQW7RCyibyxNtikgHkwlvp6b";
+		try {
+//			PKCS8EncodedKeySpec keySpec = new PKCS8EncodedKeySpec(Base64.decodeBase64(privateKey.getBytes()));
+			byte[] temp = new BASE64Decoder().decodeBuffer(privateKey);
+			PKCS8EncodedKeySpec keySpec = new PKCS8EncodedKeySpec(temp);
+			KeyFactory keyFactory = KeyFactory.getInstance(EnumCipherAlgorithm.RSA_ECB_PKCS1Padding.getKeyAlgorithm().name());
+			return (RSAPrivateKey) keyFactory.generatePrivate(keySpec);
+		} catch (NoSuchAlgorithmException e) {
+			throw new Exception("无此算法");
+		} catch (InvalidKeySpecException e) {
+			throw new Exception("私钥非法");
+		} catch (NullPointerException e) {
+			throw new Exception("私钥数据为空");
+		}
+	}
+
+	/**
+	 * 公钥加密过程
+	 * @param plainTextData 明文数据
+	 * @return
+	 * @throws Exception 加密过程中的异常信息
+	 */
+	public static String encryptRSA(String plainTextData) throws Exception {
+		Cipher cipher = null;
+		try {
+			// 使用默认RSA
+			cipher = Cipher.getInstance(EnumCipherAlgorithm.RSA_ECB_PKCS1Padding.getKeyAlgorithm().name());
+			// cipher= Cipher.getInstance("RSA", new BouncyCastleProvider());
+			cipher.init(Cipher.ENCRYPT_MODE, loadPublicKeyByStr());
+			byte[] byteContent = plainTextData.getBytes("utf-8");
+			byte[] output = cipher.doFinal(byteContent);
+
+//			return new String(Base64.encodeBase64(output));
+			byte[] temp = new BASE64Encoder().encode(output).getBytes();
+			return new String(temp);
+		} catch (NoSuchAlgorithmException e) {
+			throw new Exception("无此加密算法");
+		} catch (NoSuchPaddingException e) {
+			e.printStackTrace();
+			return null;
+		} catch (InvalidKeyException e) {
+			throw new Exception("加密公钥非法,请检查");
+		} catch (IllegalBlockSizeException e) {
+			throw new Exception("明文长度非法");
+		} catch (BadPaddingException e) {
+			throw new Exception("明文数据已损坏");
+		}
+	}
+
+	/**
+	 * 私钥解密过程
+	 * @param cipherData 密文数据
+	 * @return 明文
+	 * @throws Exception 解密过程中的异常信息
+	 */
+	public static String decryptRSA(String cipherData) throws Exception {
+		Cipher cipher = null;
+		try {
+			// 使用默认RSA
+			cipher = Cipher.getInstance(EnumCipherAlgorithm.RSA_ECB_PKCS1Padding.getKeyAlgorithm().name());
+			cipher.init(Cipher.DECRYPT_MODE, loadPrivateKeyByStr());
+//			byte[] byteContent = Base64.decodeBase64(cipherData.getBytes());
+			byte[] byteContent = new BASE64Decoder().decodeBuffer(cipherData);
+
+			StringBuilder sb = new StringBuilder();
+			for (int i = 0; i < byteContent.length; i += 128) {
+				byte[] subarray = ArrayUtils.subarray(byteContent, i, i + 128);
+				byte[] doFinal = cipher.doFinal(subarray);
+				sb.append(new String(doFinal, "utf-8"));
+			}
+			// byte[] output = cipher.doFinal(byteContent);
+			String strDate = sb.toString();
+			return strDate;
+		} catch (NoSuchAlgorithmException e) {
+			throw new Exception("无此解密算法");
+		} catch (NoSuchPaddingException e) {
+			e.printStackTrace();
+			return null;
+		} catch (InvalidKeyException e) {
+			throw new Exception("解密私钥非法,请检查");
+		} catch (IllegalBlockSizeException e) {
+			e.printStackTrace();
+			throw new Exception("密文长度非法");
+		} catch (BadPaddingException e) {
+			throw new Exception("密文数据已损坏");
+		}
+	}
+
+
 	public static void main(String[] args) throws Exception {
 
 		try {
@@ -361,24 +486,24 @@ public class CipherUtil {
 			for (EnumCipherAlgorithm cipherAlgorithm : EnumCipherAlgorithm.values()) {
 				log.info(cipherAlgorithm.getValue());
 				if(EnumKeyAlgorithm.getSymmetric().contains(cipherAlgorithm.getKeyAlgorithm())){
-                    /**
-                     * 对称密码（共享密钥密码）- 用相同的密钥进行加密和解密
-                     * DES（data encryption standard）- 淘汰
-                     * 3DES（triple DES）- 目前被银行机构使用
-                     * AES（advanced encryption standard）- 方向
-                     * IDEA用于邮件加密，避开美国法律限制 – 国产
-                     */
-				    SecretKey secretKey = KeyUtil.generateKey(cipherAlgorithm.getKeyAlgorithm(), null);
-				    log.info("对称加密的密钥： {}", NumberUtil.bytesToStrHex(secretKey.getEncoded()));
+					/**
+					 * 对称密码（共享密钥密码）- 用相同的密钥进行加密和解密
+					 * DES（data encryption standard）- 淘汰
+					 * 3DES（triple DES）- 目前被银行机构使用
+					 * AES（advanced encryption standard）- 方向
+					 * IDEA用于邮件加密，避开美国法律限制 – 国产
+					 */
+					SecretKey secretKey = KeyUtil.generateKey(cipherAlgorithm.getKeyAlgorithm(), null);
+					log.info("对称加密的密钥： {}", NumberUtil.bytesToStrHex(secretKey.getEncoded()));
 					byte[] e = encrypt(cipherAlgorithm,NumberUtil.bytesToStrHex(secretKey.getEncoded()), dataString.getBytes());
 					log.info("对称加密后数据： {}", NumberUtil.bytesToStrHex(e));
 					byte[] d = decrypt(cipherAlgorithm, secretKey.getEncoded(), e);
 					log.info("对称解密后数据： {}", new String(d));
 				}else{
-                    /**
-                     * 公钥密码(非对称密码) - 用公钥加密，用私钥解密
-                     * RSA
-                     */
+					/**
+					 * 公钥密码(非对称密码) - 用公钥加密，用私钥解密
+					 * RSA
+					 */
 					KeyPair keyPair = KeyUtil.generateKeyPair(cipherAlgorithm.getKeyAlgorithm(), null);
 					log.info("非对称加密的公钥： {}\n非对称加密的私钥： {}", NumberUtil.bytesToStrHex(keyPair.getPublic().getEncoded()), NumberUtil.bytesToStrHex(keyPair.getPrivate().getEncoded()));
 					byte[] e = encrypt(cipherAlgorithm, keyPair.getPublic().getEncoded(),dataString.getBytes());
@@ -410,111 +535,5 @@ public class CipherUtil {
 		log.info("前后台通用RSA非对称解密： {}", d);
 	}
 
-	/**
-	 * 从字符串中加载公钥
-	 * @return
-	 * @throws Exception 加载公钥时产生的异常
-	 */
-	private static RSAPublicKey loadPublicKeyByStr() throws Exception {
-		String publicKey = "MIGfMA0GCSqGSIb3DQEBAQUAA4GNADCBiQKBgQC7rS78PJLTDLcHmF7bSUteQZB7joIyuCx3Z8T5A+KPbFQFPZmXMigDhM4vbzcfrUwcKq+c7X+wQPJ3Poi6VpCGnRbK8ts6+PIH8klS/UT/+LS9V+eEA0fBlD1MwQemJIYUhFbAvlGJ4IBubo9qjOaHJCPlBI93p3WMyp3N4GoONwIDAQAB";
-		try {
-			KeyFactory keyFactory = KeyFactory.getInstance(EnumCipherAlgorithm.RSA_ECB_PKCS1Padding.getKeyAlgorithm().name());
-			X509EncodedKeySpec keySpec = new X509EncodedKeySpec(Base64.decodeBase64(publicKey));
-			return (RSAPublicKey) keyFactory.generatePublic(keySpec);
-		} catch (NoSuchAlgorithmException e) {
-			throw new Exception("无此算法");
-		} catch (InvalidKeySpecException e) {
-			throw new Exception("公钥非法");
-		} catch (NullPointerException e) {
-			throw new Exception("公钥数据为空");
-		}
-	}
-
-	/**
-	 * 从字符串中加载私钥
-	 * @return
-	 * @throws Exception
-	 */
-	public static RSAPrivateKey loadPrivateKeyByStr() throws Exception {
-		String privateKey = "MIICeAIBADANBgkqhkiG9w0BAQEFAASCAmIwggJeAgEAAoGBALutLvw8ktMMtweYXttJS15BkHuOgjK4LHdnxPkD4o9sVAU9mZcyKAOEzi9vNx+tTBwqr5ztf7BA8nc+iLpWkIadFsry2zr48gfySVL9RP/4tL1X54QDR8GUPUzBB6YkhhSEVsC+UYnggG5uj2qM5ockI+UEj3endYzKnc3gag43AgMBAAECgYA427QDaRqWZCDDZU8/okn6KWTrefZKBXA7UK3lP18RUqF14P66RtDGmCKbTldl+mu3kNsZcP6hWFvc8o4b3gP0r5nlW+12Xp6qwg7Ayx7QnvujytnZKu3ijRQhYTXKa9EDbUnPQSMdvBmdnij+QwXGxCiQr90wXslkawNB/GfjIQJBAOKOC4Mi4NWhZptNTZE+4YQcdwM7d8z3PYqv9yGvgym9aPz6EfMX9R4RMBILIjSlNAuRtb+O+zJmfcLWr4Kr7YcCQQDUEZLq4YRjiXJpPCsL+PiQamPF64w/TPNzSF/NzBr3Brkj7/iLk/QANy+3oIbaJMFf7qIEFbf8nGuPyEq8qoXRAkEAjKorRbG7LYk3/wchOSR0uyU9U7lxqcZ85IZbCAREiP78l83gpTHj1FZRpXJaO5uzU9eVpClvmByAyx+m+5gqMwJBAIUpg9d5RGg8JltuLJmX/HyyUXQ2NBqLd1MsXvwa7dOvpRGr3aXHga+g95WWdxcDfWl/rrxh5uX4UpI2creFXAECQQDZVivHFIE1oU7ayXvICgNp72gmwZPWoKyY8coJ7lw200YYMRfP/ZaYDh1dSCsRAQW7RCyibyxNtikgHkwlvp6b";
-		try {
-			PKCS8EncodedKeySpec keySpec = new PKCS8EncodedKeySpec(Base64.decodeBase64(privateKey.getBytes()));
-			KeyFactory keyFactory = KeyFactory.getInstance(EnumCipherAlgorithm.RSA_ECB_PKCS1Padding.getKeyAlgorithm().name());
-			return (RSAPrivateKey) keyFactory.generatePrivate(keySpec);
-		} catch (NoSuchAlgorithmException e) {
-			throw new Exception("无此算法");
-		} catch (InvalidKeySpecException e) {
-			throw new Exception("私钥非法");
-		} catch (NullPointerException e) {
-			throw new Exception("私钥数据为空");
-		}
-	}
-
-	/**
-	 * 公钥加密过程
-	 * @param plainTextData 明文数据
-	 * @return
-	 * @throws Exception 加密过程中的异常信息
-	 */
-	public static String encryptRSA(String plainTextData) throws Exception {
-		Cipher cipher = null;
-		try {
-			// 使用默认RSA
-			cipher = Cipher.getInstance(EnumCipherAlgorithm.RSA_ECB_PKCS1Padding.getKeyAlgorithm().name());
-			// cipher= Cipher.getInstance("RSA", new BouncyCastleProvider());
-			cipher.init(Cipher.ENCRYPT_MODE, loadPublicKeyByStr());
-			byte[] byteContent = plainTextData.getBytes("utf-8");
-			byte[] output = cipher.doFinal(byteContent);
-			return new String(Base64.encodeBase64(output));
-		} catch (NoSuchAlgorithmException e) {
-			throw new Exception("无此加密算法");
-		} catch (NoSuchPaddingException e) {
-			e.printStackTrace();
-			return null;
-		} catch (InvalidKeyException e) {
-			throw new Exception("加密公钥非法,请检查");
-		} catch (IllegalBlockSizeException e) {
-			throw new Exception("明文长度非法");
-		} catch (BadPaddingException e) {
-			throw new Exception("明文数据已损坏");
-		}
-	}
-
-	/**
-	 * 私钥解密过程
-	 * @param cipherData 密文数据
-	 * @return 明文
-	 * @throws Exception 解密过程中的异常信息
-	 */
-	public static String decryptRSA(String cipherData) throws Exception {
-		Cipher cipher = null;
-		try {
-			// 使用默认RSA
-			cipher = Cipher.getInstance(EnumCipherAlgorithm.RSA_ECB_PKCS1Padding.getKeyAlgorithm().name());
-			cipher.init(Cipher.DECRYPT_MODE, loadPrivateKeyByStr());
-			byte[] byteContent = Base64.decodeBase64(cipherData.getBytes());
-			StringBuilder sb = new StringBuilder();
-			for (int i = 0; i < byteContent.length; i += 128) {
-				byte[] subarray = ArrayUtils.subarray(byteContent, i, i + 128);
-				byte[] doFinal = cipher.doFinal(subarray);
-				sb.append(new String(doFinal, "utf-8"));
-			}
-			// byte[] output = cipher.doFinal(byteContent);
-			String strDate = sb.toString();
-			return strDate;
-		} catch (NoSuchAlgorithmException e) {
-			throw new Exception("无此解密算法");
-		} catch (NoSuchPaddingException e) {
-			e.printStackTrace();
-			return null;
-		} catch (InvalidKeyException e) {
-			throw new Exception("解密私钥非法,请检查");
-		} catch (IllegalBlockSizeException e) {
-			e.printStackTrace();
-			throw new Exception("密文长度非法");
-		} catch (BadPaddingException e) {
-			throw new Exception("密文数据已损坏");
-		}
-	}
 
 }
